[gd_scene load_steps=31 format=4 uid="uid://cpdu1br14vlr3"]

[ext_resource type="Script" path="res://addons/func_godot/src/map/func_godot_map.gd" id="1_1ehtp"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_bcvlw"]
[ext_resource type="Resource" uid="uid://bkhxcqsquw1yg" path="res://addons/func_godot/func_godot_default_map_settings.tres" id="2_mrw23"]
[ext_resource type="Texture2D" uid="uid://ejbt5ma2l6wg" path="res://assets/textures/world/Snow010A_1K-PNG_Color.png" id="3_qca8p"]
[ext_resource type="AudioStream" uid="uid://bskj6cuunm81o" path="res://assets/sound effects/Howling Wind - High Quality Sound.wav" id="5_hjdrk"]
[ext_resource type="Texture2D" uid="uid://dxbevfmtcj4yb" path="res://assets/textures/others/title for Godot Wild Jam 76.png" id="6_8wmos"]
[ext_resource type="Script" path="res://audio.gd" id="6_a5tdm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0xjro"]
albedo_texture = ExtResource("3_qca8p")
metallic_specular = 0.0
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_hrwyx"]
_surfaces = [{
"aabb": AABB(-141, 0, -41.5, 139, 2, 86),
"attribute_data": PackedByteArray("AABIQQAAIL4AAEhBAAAAAAAAID8AAAAAAAAgPwAAIL4AACC/AAAgvgAAyD8AACC+AADIPwAAAAAAACC/AAAAAAAAID8AACA/AAAgPwAASEEAAMi/AABIQQAAyL8AACA/AAAgvwAAID8AAMg/AAAgPwAAyD8AAEhBAAAgvwAASEEAACA/AAAgvgAAID8AAAAAAADIvwAAAAAAAMi/AAAgvgAASMEAACC+AAAgvwAAIL4AACC/AAAAAAAASMEAAAAAAEDxQQAAIL4AQPFBAAAAAAAASEEAAAAAAABIQQAAIL4AACC/AAAgvgAAyD8AACC+AADIPwAAAAAAACC/AAAAAAAAID8AAEhBAAAgPwBA8UEAAMi/AEDxQQAAyL8AAEhBAAAgvwAASEEAAMg/AABIQQAAyD8AQPFBAAAgvwBA8UEAACA/AAAgvgAAID8AAAAAAADIvwAAAAAAAMi/AAAgvgBA8cEAACC+AABIwQAAIL4AAEjBAAAAAABA8cEAAAAAAAAvQgAAIL4AAC9CAAAAAABA8UEAAAAAAEDxQQAAIL4AACC/AAAgvgAAyD8AACC+AADIPwAAAAAAACC/AAAAAAAAID8AQPFBAAAgPwAAL0IAAMi/AAAvQgAAyL8AQPFBAAAgvwBA8UEAAMg/AEDxQQAAyD8AAC9CAAAgvwAAL0IAACA/AAAgvgAAID8AAAAAAADIvwAAAAAAAMi/AAAgvgAAL8IAACC+AEDxwQAAIL4AQPHBAAAAAAAAL8IAAAAAAEAwQgAA8L4AQDBCAAAgvgAAID8AACC+AAAgPwAA8L4AAHC/AADwvgAAIL8AACC+AABwvwAAIL4AAHA/AAAgPwAAcD8AQDBCAAAgPwBAMEIAACA/AAAgPwAAcD8AAPC+AABwPwAAIL4AACA/AAAgvvWOfr8AACA/3msNvwAAID/eaw2/AEAwQvWOfr8AQDBCAACgPwAAIL8AAKA/AADwvv//bz///+++AAAgPwAAIL8AAC9CAAAgvwAAL0IAAPC+AAAgPwAA8L4AAKC/AAAgv///b7///+++AACgvwAA8L7//28/AAAgPwAAoD8AACA/AACgPwAAL0L//28/AAAvQgAqhr8AACA/ACqGvwAAL0Ks4rK/AAAvQqzisr8AACA/AAAvQgAAIL8AAC9CAADwvgAAID8AAPC+AAAgPwAAIL8AgE/BAAAgvwAAoL8AACC/AACgvwAA8L4AgE/BAADwvgCAT0EAACA/AIBPQQAAL0IAAKA/AAAvQgAAoD8AACA/AIBPwQAAID8AAKC/AAAgPwAAoL8AAC9CAIBPwQAAL0IAgE9BAAAgvwCAT0EAAPC+AACgPwAA8L4AAKA/AAAgvwAAL8IAACC/AAAgvwAAIL8AACC/AADwvgAAL8IAAPC+JMbEvwAAL0I0/6C/AAAvQjT/oL8AACA/JMbEvwAAID8AAAzAAAAgvwAADMAAAPC+///vv///777//++/AAAgP///778AAC9CAAAMwAAAL0IAAAzAAAAgPwAADEAAACC////vP///774AAAxAAADwvgAAID8AACC/AAAgPwAA8L4AAC9CAADwvgAAL0IAACC/AAAvwgAAIL8AAC/CAADwvgAAIL8AAPC+AAAgvwAAIL8AAAzAAAAgvwCAXsEAACC/AIBewQAA8L4AAAzAAADwvgAADMAAACA/AAAMwAAAL0IAgF7BAAAvQgCAXsEAACA/AAAMQAAAID8AgF5BAAAgPwCAXkEAAC9CAAAMQAAAL0IAAAxAAAAgvwAADEAAAPC+AIBeQQAA8L4AgF5BAAAgvwAAL0IAACC/AAAgPwAAIL8AACA/AADwvgAAL0IAAPC+zSHUvwAAL0JAkJu/AAAvQkCQm78AACA/zSHUvwAAID8AAPC/AADwvgAA8L8AACC+///HvwAAIL7//8e/AAAgP///x78AAC9CAADwvwAAL0IAAPC/AAAgPwAA8L8AAPC+///HvwAAIL4AAPC/AAAgvgAAID8AAPC+AAAgPwAAIL4AAC9CAAAgvgAAL0IAAPC+"),
"format": 34359742487,
"index_count": 276,
"index_data": PackedByteArray("AAABAAIAAAACAAMABAAFAAYABAAGAAcACAAJAAoACAAKAAsADAANAA4ADAAOAA8AEAARABIAEAASABMAFAAVABYAFAAWABcAGAAZABoAGAAaABsAHAAdAB4AHAAeAB8AIAAhACIAIAAiACMAJAAlACYAJAAmACcAKAApACoAKAAqACsALAAtAC4ALAAuAC8AMAAxADIAMAAyADMANAA1ADYANAA2ADcAOAA5ADoAOAA6ADsAPAA9AD4APAA+AD8AQABBAEIAQABCAEMARABFAEYARABGAEcASABJAEoASABKAEsATABNAE4ATwBQAFEATwBRAFIAUwBUAFUAVgBXAFgAVgBYAFkAWgBbAFwAXQBeAF8AXQBfAGAAYQBiAGMAZABlAGYAZABmAGcAaABpAGoAaABqAGsAbABtAG4AbABuAG8AcABxAHIAcAByAHMAdAB1AHYAdAB2AHcAeAB5AHoAeAB6AHsAfAB9AH4AfAB+AH8AgACBAIIAgACCAIMAhACFAIYAhACGAIcAiACJAIoAiwCMAI0AiwCNAI4AjwCQAJEAkgCTAJQAkgCUAJUAlgCXAJgAlgCYAJkAmgCbAJwAmgCcAJ0AngCfAKAAngCgAKEAogCjAKQAogCkAKUApgCnAKgApgCoAKkAqgCrAKwAqgCsAK0ArgCvALAArgCwALEAsgCzALQAtQC2ALcAtQC3ALgAuQC6ALsAvAC9AL4AvAC+AL8A"),
"material": SubResource("StandardMaterial3D_0xjro"),
"name": "world/Snow010A_1K-PNG_Color",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 192,
"vertex_data": PackedByteArray("AAAgwgAAAD8AAADAAAAgwgAAAAAAAADAAAAAwAAAAAAAAADAAAAAwAAAAD8AAADAAAAgwgAAAD8AAADAAAAgwgAAAD8AAKBAAAAgwgAAAAAAAKBAAAAgwgAAAAAAAADAAAAAwAAAAAAAAADAAAAgwgAAAAAAAADAAAAgwgAAAAAAAKBAAAAAwAAAAAAAAKBAAAAAwAAAAD8AAADAAAAAwAAAAD8AAKBAAAAgwgAAAD8AAKBAAAAgwgAAAD8AAADAAAAAwAAAAD8AAADAAAAAwAAAAAAAAADAAAAAwAAAAAAAAKBAAAAAwAAAAD8AAKBAAAAgwgAAAD8AAKBAAAAAwAAAAD8AAKBAAAAAwAAAAAAAAKBAAAAgwgAAAAAAAKBAAADBwgAAAD8AAADAAADBwgAAAAAAAADAAAAgwgAAAAAAAADAAAAgwgAAAD8AAADAAADBwgAAAD8AAADAAADBwgAAAD8AAKBAAADBwgAAAAAAAKBAAADBwgAAAAAAAADAAAAgwgAAAAAAAADAAADBwgAAAAAAAADAAADBwgAAAAAAAKBAAAAgwgAAAAAAAKBAAAAgwgAAAD8AAADAAAAgwgAAAD8AAKBAAADBwgAAAD8AAKBAAADBwgAAAD8AAADAAAAgwgAAAD8AAADAAAAgwgAAAAAAAADAAAAgwgAAAAAAAKBAAAAgwgAAAD8AAKBAAADBwgAAAD8AAKBAAAAgwgAAAD8AAKBAAAAgwgAAAAAAAKBAAADBwgAAAAAAAKBAAAAMwwAAAD8AAADAAAAMwwAAAAAAAADAAADBwgAAAAAAAADAAADBwgAAAD8AAADAAAAMwwAAAD8AAADAAAAMwwAAAD8AAKBAAAAMwwAAAAAAAKBAAAAMwwAAAAAAAADAAADBwgAAAAAAAADAAAAMwwAAAAAAAADAAAAMwwAAAAAAAKBAAADBwgAAAAAAAKBAAADBwgAAAD8AAADAAADBwgAAAD8AAKBAAAAMwwAAAD8AAKBAAAAMwwAAAD8AAADAAADBwgAAAD8AAADAAADBwgAAAAAAAADAAADBwgAAAAAAAKBAAADBwgAAAD8AAKBAAAAMwwAAAD8AAKBAAADBwgAAAD8AAKBAAADBwgAAAAAAAKBAAAAMwwAAAAAAAKBAAAANwwAAwD8AAEDAAAANwwAAAD8AAEDAAAAAwAAAAD8AAEDAAAAAwAAAwD8AAEDAAAANwwAAwD8AAEDAAAANwwAAAD8AAADAAAANwwAAAD8AAEDAAAAAwAAAAD8AAEDAAAANwwAAAD8AAEDAAAANwwAAAD8AAADAAAAAwAAAAD8AAADAAAAAwAAAwD8AAEDAAAAAwAAAAD8AAEDAAAAAwAAAAD8AAADAAAAAwAAAwD8AAEDAAAAAwAAAAD8AAADAAAANwwAAAD8AAADAAAANwwAAwD8AAEDAAAAAwAAAAEAAAIDAAAAAwAAAwD8AAIDAAAAAwP//vz///z/AAAAAwAAAAEAAAIDAAAAMwwAAAEAAAIDAAAAMwwAAwD8AAIDAAAAAwAAAwD8AAIDAAAAMwwAAAEAAAIDAAAAMw///vz///z/AAAAMwwAAwD8AAIDAAAAAwP//vz///z/AAAAAwAAAwD8AAIDAAAAMwwAAwD8AAIDAAAAMw///vz///z/AAAAAwP//vz///z/AAAAMw///vz///z/AAAAMwwAAAEAAAIDAAAAAwAAAAEAAAIDAAAAMwwAAAEAAACbCAAAMwwAAwD8AACbCAAAAwAAAwD8AACbCAAAAwAAAAEAAACbCAAAMwwAAAEAAACbCAAAMwwAAAEAAAIDAAAAMwwAAwD8AAIDAAAAMwwAAwD8AACbCAAAAwAAAwD8AACbCAAAMwwAAwD8AACbCAAAMwwAAwD8AAIDAAAAAwAAAwD8AAIDAAAAAwAAAAEAAACbCAAAAwAAAAEAAAIDAAAAMwwAAAEAAAIDAAAAMwwAAAEAAACbCAAAAwAAAAEAAACbCAAAAwAAAwD8AACbCAAAAwAAAwD8AAIDAAAAAwAAAAEAAAIDAAAAMwwAAAEAAAIDAAAAAwAAAAEAAAIDAAAAAwAAAwD8AAIDAAAAMwwAAwD8AAIDAAAAMwwAAAEAAAOBAAAAMw///vz///79AAAAAwP//vz///79AAAAAwAAAAEAAAOBAAAAMwwAAAEAAAOBAAAAMwwAAwD8AAOBAAAAMw///vz///79AAAAAwP//vz///79AAAAMw///vz///79AAAAMwwAAwD8AAOBAAAAAwAAAwD8AAOBAAAAAwAAAAEAAAOBAAAAAwP//vz///79AAAAAwAAAwD8AAOBAAAAAwAAAAEAAAOBAAAAAwAAAwD8AAOBAAAAMwwAAwD8AAOBAAAAMwwAAAEAAAOBAAAAMwwAAAEAAAOBAAAAMwwAAwD8AAOBAAAAAwAAAwD8AAOBAAAAAwAAAAEAAAOBAAAAMwwAAAEAAAOBAAAAMwwAAAEAAADJCAAAMwwAAwD8AADJCAAAMwwAAwD8AAOBAAAAAwAAAwD8AAOBAAAAMwwAAwD8AAOBAAAAMwwAAwD8AADJCAAAAwAAAwD8AADJCAAAAwAAAAEAAAOBAAAAAwAAAAEAAADJCAAAMwwAAAEAAADJCAAAMwwAAAEAAAOBAAAAAwAAAAEAAAOBAAAAAwAAAwD8AAOBAAAAAwAAAwD8AADJCAAAAwAAAAEAAADJCAAAMwwAAAEAAADJCAAAAwAAAAEAAADJCAAAAwAAAwD8AADJCAAAMwwAAwD8AADJCAAAMwwAAwD8AAMBAAAAMwwAAAD///59AAAAAwAAAAD///59AAAAAwAAAwD8AAMBAAAAMwwAAwD8AAMBAAAAMwwAAAD8AAMBAAAAMwwAAAD///59AAAAAwAAAAD///59AAAAMwwAAAD///59AAAAMwwAAAD8AAMBAAAAAwAAAAD8AAMBAAAAAwAAAwD8AAMBAAAAAwAAAAD///59AAAAAwAAAAD8AAMBAAAAAwAAAwD8AAMBAAAAAwAAAAD8AAMBAAAAMwwAAAD8AAMBAAAAMwwAAwD8AAMBA/////wAA/7//////AAD/v/////8AAP+//////wAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v/9/AAD//////38AAP//////fwAA//////9/AAD//////3////9//7//f////3//v/9/////f/+//3////9//7////9//////////3//////////f/////////9///////9//3////+//3//f////7//f/9/////v/9//3////+//////wAA/7//////AAD/v/////8AAP+//////wAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v/9/AAD//////38AAP//////fwAA//////9/AAD//////3////9//7//f////3//v/9/////f/+//3////9//7////9//////////3//////////f/////////9///////9//3////+//3//f////7//f/9/////v/9//3////+//////wAA/7//////AAD/v/////8AAP+//////wAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v/9/AAD//////38AAP//////fwAA//////9/AAD//////3////9//7//f////3//v/9/////f/+//3////9//7////9//////////3//////////f/////////9///////9//3////+//3//f////7//f/9/////v/9//3////+//////wAA/7//////AAD/v/////8AAP+//////wAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//7//fwAA//////9/AAD//////38AAP//////fwAA/////////3//////////f/////////9///////9//7//f/+f/3//v/9//5//f/+//3//n/9//7//f/+f////f/////////9//////////3///////////wAA/7//////AAD/v/////8AAP+//////wAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//7//fwAA//////9/AAD//////38AAP//////fwAA//////9/VNX/f6mq/39U1f9/qar/f1TV/3+pqv9/VNX/f6mq/////wAA/7//////AAD/v/////8AAP+//////wAA/78AAP9//3//vwAA/3//f/+/AAD/f/9//78AAP9//3//v/9/AAD//////38AAP//////fwAA//////9/AAD//////3////9//7//f////3//v/9/////f/+//3////9//7////9//////////3//////////f/////////9///////9//3////+//3//f////7//f/9/////v/9//3////+/qar//6mq/n+pqv//qar+f6mq//+pqv5/qar//6mq/n8AAP9///8AAAAA/3///wAAAAD/f///AAD/fwAA//////9/AAD//////38AAP//////fwAA/////////3//f/8/////f/9//z////9//3//P/9//38AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8//////////z//////////P/////////8//////////z8AAP9///8AAAAA/3///wAAAAD/f///AAAAAP9///8AAP9/AAD//////38AAP//////fwAA//////9/AAD//////3////9//7//f////3//v/9/////f/+//3////9//7////9//3//P////3//f/8/////f/9//z////9//3//P/9//38AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8//7////+//n//v////7/+f/+/////v/5//7////+//n8AAP9///8AAAAA/3///wAAAAD/f///AAD/fwAA//////9/AAD//////38AAP//////fwAA/////////3//////////f/////////9///////9//38AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8/")
}]

[sub_resource type="ArrayOccluder3D" id="ArrayOccluder3D_c0h3p"]
vertices = PackedVector3Array(-40, 0.5, -2, -40, 0, -2, -2, 0, -2, -2, 0.5, -2, -40, 0.5, -2, -40, 0.5, 5, -40, 0, 5, -40, 0, -2, -2, 0, -2, -40, 0, -2, -40, 0, 5, -2, 0, 5, -2, 0.5, -2, -2, 0.5, 5, -40, 0.5, 5, -40, 0.5, -2, -2, 0.5, -2, -2, 0, -2, -2, 0, 5, -2, 0.5, 5, -40, 0.5, 5, -2, 0.5, 5, -2, 0, 5, -40, 0, 5, -96.5, 0.5, -2, -96.5, 0, -2, -40, 0, -2, -40, 0.5, -2, -96.5, 0.5, -2, -96.5, 0.5, 5, -96.5, 0, 5, -96.5, 0, -2, -40, 0, -2, -96.5, 0, -2, -96.5, 0, 5, -40, 0, 5, -40, 0.5, -2, -40, 0.5, 5, -96.5, 0.5, 5, -96.5, 0.5, -2, -40, 0.5, -2, -40, 0, -2, -40, 0, 5, -40, 0.5, 5, -96.5, 0.5, 5, -40, 0.5, 5, -40, 0, 5, -96.5, 0, 5, -140, 0.5, -2, -140, 0, -2, -96.5, 0, -2, -96.5, 0.5, -2, -140, 0.5, -2, -140, 0.5, 5, -140, 0, 5, -140, 0, -2, -96.5, 0, -2, -140, 0, -2, -140, 0, 5, -96.5, 0, 5, -96.5, 0.5, -2, -96.5, 0.5, 5, -140, 0.5, 5, -140, 0.5, -2, -96.5, 0.5, -2, -96.5, 0, -2, -96.5, 0, 5, -96.5, 0.5, 5, -140, 0.5, 5, -96.5, 0.5, 5, -96.5, 0, 5, -140, 0, 5, -141, 1.5, -3, -141, 0.5, -3, -2, 0.5, -3, -2, 1.5, -3, -141, 1.5, -3, -141, 0.5, -2, -141, 0.5, -3, -2, 0.5, -3, -141, 0.5, -3, -141, 0.5, -2, -2, 0.5, -2, -2, 1.5, -3, -2, 0.5, -3, -2, 0.5, -2, -2, 1.5, -3, -2, 0.5, -2, -141, 0.5, -2, -141, 1.5, -3, -2, 2, -4, -2, 1.5, -4, -2, 1.5, -3, -2, 2, -4, -140, 2, -4, -140, 1.5, -4, -2, 1.5, -4, -140, 2, -4, -140, 1.5, -3, -140, 1.5, -4, -2, 1.5, -3, -2, 1.5, -4, -140, 1.5, -4, -140, 1.5, -3, -2, 1.5, -3, -140, 1.5, -3, -140, 2, -4, -2, 2, -4, -140, 2, -41.5, -140, 1.5, -41.5, -2, 1.5, -41.5, -2, 2, -41.5, -140, 2, -41.5, -140, 2, -4, -140, 1.5, -4, -140, 1.5, -41.5, -2, 1.5, -41.5, -140, 1.5, -41.5, -140, 1.5, -4, -2, 1.5, -4, -2, 2, -41.5, -2, 2, -4, -140, 2, -4, -140, 2, -41.5, -2, 2, -41.5, -2, 1.5, -41.5, -2, 1.5, -4, -2, 2, -4, -140, 2, -4, -2, 2, -4, -2, 1.5, -4, -140, 1.5, -4, -140, 2, 7, -140, 1.5, 6, -2, 1.5, 6, -2, 2, 7, -140, 2, 7, -140, 1.5, 7, -140, 1.5, 6, -2, 1.5, 6, -140, 1.5, 6, -140, 1.5, 7, -2, 1.5, 7, -2, 2, 7, -2, 1.5, 6, -2, 1.5, 7, -2, 2, 7, -2, 1.5, 7, -140, 1.5, 7, -140, 2, 7, -140, 2, 7, -140, 1.5, 7, -2, 1.5, 7, -2, 2, 7, -140, 2, 7, -140, 2, 44.5, -140, 1.5, 44.5, -140, 1.5, 7, -2, 1.5, 7, -140, 1.5, 7, -140, 1.5, 44.5, -2, 1.5, 44.5, -2, 2, 7, -2, 2, 44.5, -140, 2, 44.5, -140, 2, 7, -2, 2, 7, -2, 1.5, 7, -2, 1.5, 44.5, -2, 2, 44.5, -140, 2, 44.5, -2, 2, 44.5, -2, 1.5, 44.5, -140, 1.5, 44.5, -140, 1.5, 6, -140, 0.5, 5, -2, 0.5, 5, -2, 1.5, 6, -140, 1.5, 6, -140, 0.5, 6, -140, 0.5, 5, -2, 0.5, 5, -140, 0.5, 5, -140, 0.5, 6, -2, 0.5, 6, -2, 1.5, 6, -2, 0.5, 5, -2, 0.5, 6, -2, 1.5, 6, -2, 0.5, 6, -140, 0.5, 6, -140, 1.5, 6)
indices = PackedInt32Array(0, 1, 2, 0, 2, 3, 4, 5, 6, 4, 6, 7, 8, 9, 10, 8, 10, 11, 12, 13, 14, 12, 14, 15, 16, 17, 18, 16, 18, 19, 20, 21, 22, 20, 22, 23, 24, 25, 26, 24, 26, 27, 28, 29, 30, 28, 30, 31, 32, 33, 34, 32, 34, 35, 36, 37, 38, 36, 38, 39, 40, 41, 42, 40, 42, 43, 44, 45, 46, 44, 46, 47, 48, 49, 50, 48, 50, 51, 52, 53, 54, 52, 54, 55, 56, 57, 58, 56, 58, 59, 60, 61, 62, 60, 62, 63, 64, 65, 66, 64, 66, 67, 68, 69, 70, 68, 70, 71, 72, 73, 74, 72, 74, 75, 76, 77, 78, 79, 80, 81, 79, 81, 82, 83, 84, 85, 86, 87, 88, 86, 88, 89, 90, 91, 92, 93, 94, 95, 93, 95, 96, 97, 98, 99, 100, 101, 102, 100, 102, 103, 104, 105, 106, 104, 106, 107, 108, 109, 110, 108, 110, 111, 112, 113, 114, 112, 114, 115, 116, 117, 118, 116, 118, 119, 120, 121, 122, 120, 122, 123, 124, 125, 126, 124, 126, 127, 128, 129, 130, 128, 130, 131, 132, 133, 134, 132, 134, 135, 136, 137, 138, 139, 140, 141, 139, 141, 142, 143, 144, 145, 146, 147, 148, 146, 148, 149, 150, 151, 152, 150, 152, 153, 154, 155, 156, 154, 156, 157, 158, 159, 160, 158, 160, 161, 162, 163, 164, 162, 164, 165, 166, 167, 168, 166, 168, 169, 170, 171, 172, 170, 172, 173, 174, 175, 176, 174, 176, 177, 178, 179, 180, 181, 182, 183, 181, 183, 184, 185, 186, 187, 188, 189, 190, 188, 190, 191)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_kjfoc"]
points = PackedVector3Array(-40, 0.5, -2, -40, 0, -2, -2, 0, -2, -2, 0.5, -2, -40, 0.5, 5, -40, 0, 5, -2, 0, 5, -2, 0.5, 5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ui0mk"]
points = PackedVector3Array(-96.5, 0.5, -2, -96.5, 0, -2, -40, 0, -2, -40, 0.5, -2, -96.5, 0.5, 5, -96.5, 0, 5, -40, 0, 5, -40, 0.5, 5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_xrw6j"]
points = PackedVector3Array(-140, 0.5, -2, -140, 0, -2, -96.5, 0, -2, -96.5, 0.5, -2, -140, 0.5, 5, -140, 0, 5, -96.5, 0, 5, -96.5, 0.5, 5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_2uqjl"]
points = PackedVector3Array(-141, 1.5, -3, -141, 0.5, -3, -2, 0.5, -3, -2, 1.5, -3, -141, 0.5, -2, -2, 0.5, -2)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_pj0ma"]
points = PackedVector3Array(-2, 2, -4, -2, 1.5, -4, -2, 1.5, -3, -140, 2, -4, -140, 1.5, -4, -140, 1.5, -3)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_qfqtw"]
points = PackedVector3Array(-140, 2, -41.5, -140, 1.5, -41.5, -2, 1.5, -41.5, -2, 2, -41.5, -140, 2, -4, -140, 1.5, -4, -2, 1.5, -4, -2, 2, -4)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ngqtn"]
points = PackedVector3Array(-140, 2, 7, -140, 1.5, 6, -2, 1.5, 6, -2, 2, 7, -140, 1.5, 7, -2, 1.5, 7)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_1i05t"]
points = PackedVector3Array(-140, 2, 7, -140, 1.5, 7, -2, 1.5, 7, -2, 2, 7, -140, 2, 44.5, -140, 1.5, 44.5, -2, 1.5, 44.5, -2, 2, 44.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_flav3"]
points = PackedVector3Array(-140, 1.5, 6, -140, 0.5, 5, -2, 0.5, 5, -2, 1.5, 6, -140, 0.5, 6, -2, 0.5, 6)

[sub_resource type="Environment" id="Environment_3v5ih"]
fog_enabled = true
fog_light_energy = 13.24
volumetric_fog_enabled = true
volumetric_fog_density = 0.0794
volumetric_fog_emission = Color(0.572988, 0.572988, 0.572988, 1)

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_ojodx"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wo04t"]
emission_shape = 3
emission_box_extents = Vector3(20, 1, 40)
angle_min = -240.0
angle_max = -240.0
direction = Vector3(0, -1, 0)
directional_velocity_min = 1.99998
directional_velocity_max = 3.99998
directional_velocity_curve = SubResource("CurveXYZTexture_ojodx")
gravity = Vector3(0, -1, 0)
collision_mode = 1
collision_friction = 0.58
collision_bounce = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tyqlr"]
shading_mode = 0

[sub_resource type="SphereMesh" id="SphereMesh_y0fub"]
material = SubResource("StandardMaterial3D_tyqlr")
radius = 0.05
height = 0.1

[sub_resource type="Theme" id="Theme_pnoex"]

[sub_resource type="Theme" id="Theme_b7r2l"]

[sub_resource type="Animation" id="Animation_n280v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4cw0f"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333334, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_mi8va"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sldd8"]
_data = {
"RESET": SubResource("Animation_n280v"),
"fade_in": SubResource("Animation_4cw0f"),
"fade_out": SubResource("Animation_mi8va")
}

[node name="menu" type="Node3D"]
script = ExtResource("1_bcvlw")

[node name="FuncGodotMap" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -2.29541, 9.16749)
script = ExtResource("1_1ehtp")
local_map_file = "res://trenchbroom/maps/menu_scene.map"
map_settings = ExtResource("2_mrw23")

[node name="entity_0_worldspawn" type="StaticBody3D" parent="FuncGodotMap"]
collision_mask = 0

[node name="entity_0_mesh_instance" type="MeshInstance3D" parent="FuncGodotMap/entity_0_worldspawn"]
mesh = SubResource("ArrayMesh_hrwyx")

[node name="entity_0_occluder_instance" type="OccluderInstance3D" parent="FuncGodotMap/entity_0_worldspawn"]
occluder = SubResource("ArrayOccluder3D_c0h3p")

[node name="entity_0_brush_0_collision_shape" type="CollisionShape3D" parent="FuncGodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_kjfoc")

[node name="entity_0_brush_1_collision_shape" type="CollisionShape3D" parent="FuncGodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_ui0mk")

[node name="entity_0_brush_2_collision_shape" type="CollisionShape3D" parent="FuncGodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_xrw6j")

[node name="entity_0_brush_3_collision_shape" type="CollisionShape3D" parent="FuncGodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_2uqjl")

[node name="entity_0_brush_4_collision_shape" type="CollisionShape3D" parent="FuncGodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_pj0ma")

[node name="entity_0_brush_5_collision_shape" type="CollisionShape3D" parent="FuncGodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_qfqtw")

[node name="entity_0_brush_6_collision_shape" type="CollisionShape3D" parent="FuncGodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_ngqtn")

[node name="entity_0_brush_7_collision_shape" type="CollisionShape3D" parent="FuncGodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_1i05t")

[node name="entity_0_brush_8_collision_shape" type="CollisionShape3D" parent="FuncGodotMap/entity_0_worldspawn"]
shape = SubResource("ConvexPolygonShape3D_flav3")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3v5ih")

[node name="camera_sound" type="Node3D" parent="."]

[node name="GPUParticles3D" type="GPUParticles3D" parent="camera_sound"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.14246, 0)
amount = 400
lifetime = 5.0
randomness = 0.5
visibility_aabb = AABB(-20, -4, -4, 40, 8, 8)
process_material = SubResource("ParticleProcessMaterial_wo04t")
draw_pass_1 = SubResource("SphereMesh_y0fub")

[node name="camera" type="Camera3D" parent="camera_sound"]
transform = Transform3D(0.999123, 0.0129403, 0.0398261, 0, 0.951057, -0.309017, -0.0418757, 0.308746, 0.950222, 1.095, 0, 0)
fov = 93.3

[node name="wind" type="AudioStreamPlayer3D" parent="camera_sound"]
stream = ExtResource("5_hjdrk")
autoplay = true
bus = &"Ambience"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.0419976, 0.999118, 0, -0.999118, -0.0419976, 0, 75.9301, -89.5955)
light_bake_mode = 1

[node name="title" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -109.0
offset_top = -116.0
offset_right = -109.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.84, 0.84)
texture = ExtResource("6_8wmos")

[node name="main_menu" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 66.0
offset_top = -55.0
offset_right = 226.0
offset_bottom = 67.0
grow_vertical = 2
theme = SubResource("Theme_pnoex")

[node name="start" type="Button" parent="main_menu"]
layout_mode = 2
theme = SubResource("Theme_b7r2l")
theme_override_font_sizes/font_size = 21
text = "Start"

[node name="options" type="Button" parent="main_menu"]
layout_mode = 2
theme = SubResource("Theme_b7r2l")
theme_override_font_sizes/font_size = 21
text = "Options"

[node name="quit" type="Button" parent="main_menu"]
layout_mode = 2
theme = SubResource("Theme_b7r2l")
theme_override_font_sizes/font_size = 21
text = "Quit"

[node name="option_menu" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 66.0
offset_top = -55.0
offset_right = 226.0
offset_bottom = 67.0
grow_vertical = 2

[node name="video" type="Button" parent="option_menu"]
layout_mode = 2
text = "Video"

[node name="audio" type="Button" parent="option_menu"]
layout_mode = 2
text = "Audio"

[node name="controls" type="Button" parent="option_menu"]
layout_mode = 2
text = "Controls"

[node name="back_to_menu" type="Button" parent="option_menu"]
layout_mode = 2
text = "Back to Main Menu"

[node name="audio_menu" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 66.0
offset_top = -55.0
offset_right = 226.0
offset_bottom = 67.0
grow_vertical = 2

[node name="Label" type="Label" parent="audio_menu"]
layout_mode = 2
text = "Master "

[node name="Master" type="HSlider" parent="audio_menu"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("6_a5tdm")
bus_name = "Master"

[node name="Label2" type="Label" parent="audio_menu"]
layout_mode = 2
text = "SFX"

[node name="SFX" type="HSlider" parent="audio_menu"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("6_a5tdm")
bus_name = "SFX"

[node name="Label3" type="Label" parent="audio_menu"]
layout_mode = 2
text = "Ambience"

[node name="Ambience" type="HSlider" parent="audio_menu"]
layout_mode = 2
max_value = 1.0
step = 0.001
script = ExtResource("6_a5tdm")
bus_name = "Ambience"

[node name="back_options2" type="Button" parent="audio_menu"]
layout_mode = 2
text = "Back to Options"

[node name="control_menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="control_menu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -249.0
offset_top = -372.0
offset_right = 249.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="control_menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
text = "Forward: W
Backwards: S
Left: A
Right: D
Interact: E
Shoot: Left Click
Silent Crouch: Left Shift
Pause: Esc"
horizontal_alignment = 1

[node name="back_options2" type="Button" parent="control_menu/VBoxContainer"]
layout_mode = 2
text = "Back to Options"

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sldd8")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
offset_right = 640.0
offset_bottom = 481.0
color = Color(0, 0, 0, 1)

[node name="fade_timer" type="Timer" parent="."]

[connection signal="pressed" from="main_menu/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="main_menu/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="main_menu/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="option_menu/video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="option_menu/audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="option_menu/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="option_menu/back_to_menu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="audio_menu/back_options2" to="." method="_on_back_options_pressed"]
[connection signal="pressed" from="control_menu/VBoxContainer/back_options2" to="." method="_on_back_options_pressed"]
[connection signal="timeout" from="fade_timer" to="." method="_on_fade_timer_timeout"]
